Fix back button too wide

--- a/public/input.scss
+++ b/public/input.scss
@@ -288,7 +288,7 @@ h3 {
 	}
 
 	&.back {
-		// padding-left: 4px;
+		display: table;
 		font-size: 1.5em;
 	}
 
